--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% load humanize %}
+{% load om_filters %}
+
 
 {% block conteudo %}
            <!-- CONTENT -->
@@ -22,7 +24,7 @@
                     </h5>
                     <p class="card-text">{{ post.excerto_post }}</p>
                     <p class="card-text">
-                        <small class="text-muted">{{ post.data_post|naturalday|title }} | {{ post.numero_comentarios }} comentários(s)
+                        <small class="text-muted">{{ post.data_post|naturalday|title }} | {{ post.numero_comentarios|plural_comentarios }}
                              | {{ post.categoria_post }}</small>
                     </p>
 
