--- a/posts/templates/posts/post_detalhes.html
+++ b/posts/templates/posts/post_detalhes.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
+
 
 {% block titulo %} {{ post.titulo_post }} | {% endblock %}
 
@@ -64,11 +66,7 @@
                 {% endfor %} 
 
                 {% for visible_field in form.visible_fields %}
-                    <div class="form-group">
-                        {{ visible_field.errors }}
-                        {{ visible_field.label_tag }} <br>
-                        {{ visible_field }}
-                    </div>
+                    {{ visible_field|as_crispy_field }}
                 {% endfor %}
 
                 {% include 'parciais/_messages.html' %}
