--- a/posts/templates/posts/post_detalhes.html
+++ b/posts/templates/posts/post_detalhes.html
@@ -68,7 +68,8 @@
                 {% for visible_field in form.visible_fields %}
                     {{ visible_field|as_crispy_field }}
                 {% endfor %}
-
+                <div class="g-recaptcha" data-sitekey="6LeCrYAaAAAAAM2BobkdM-xuYsohHyrCEDAz2ewE"></div>
+                <br/>
                 {% include 'parciais/_messages.html' %}
                 <input id="envia_comentario" type="submit" class="btn btn-primary" value="Enviar">
             </form>
